--- a/ImportData.csproj
+++ b/ImportData.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Dapper" Version="2.0.90" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+    <PackageReference Include="Z.Dapper.Plus" Version="7.5.4" />
   </ItemGroup>
 
 </Project>
